--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </p>
           </div>          
           <!-- Button to open resume PDF -->
-          <a href="My Resume.pdf" target="_blank" class="btn btn-primary btn-lg">Click Here</a>
+          <a href="TanviShimpiResume.pdf" target="_blank" class="btn btn-primary btn-lg">Click Here</a>
         </div>
       </section>
     </div>
